--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
     "antd": "^4.5.4",
+    "d3-array": "^2.6.0",
+    "d3-scale": "^3.2.2",
+    "d3-time-format": "^3.0.0",
     "final-form": "^4.20.1",
     "lodash-es": "^4.17.15",
     "moment": "^2.27.0",
