--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           npm ci
           npm run build --if-present
-          # npm test
+          npm run lint
         env:
           CI: true
       - name: Deploy to github pages
