--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,8 +18,11 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm ci
-          npm run build --if-present
+          npm run build
           npm run lint
+          mv build Viz-react
+          npm run e2e
+          mv Viz-react build
         env:
           CI: true
       - name: Deploy to github pages
