--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint --max-warnings=0 ./src ./cypress"
+    "lint": "eslint --max-warnings=0 ./src ./cypress",
+    "cypress:run": "cypress run",
+    "e2e": "run-p --race serve cypress:run",
+    "serve": "serve ."
   },
   "browserslist": [
     ">0.2%",
@@ -43,6 +46,8 @@
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^3.3.1",
-    "prettier": "^2.5.0"
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.5.0",
+    "serve": "^13.0.2"
   }
 }
