--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   ],
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@reduxjs/toolkit": "^1.6.2",
     "antd": "^4.17.1",
     "final-form": "^4.20.4",
     "lodash-es": "^4.17.21",
@@ -35,10 +36,7 @@
     "react-final-form": "^6.5.7",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
-    "redux": "^4.1.2",
-    "redux-actions": "^2.6.5",
-    "redux-thunk": "^2.4.0"
+    "react-scripts": "^4.0.3"
   },
   "devDependencies": {
     "cypress": "^9.1.0",
