--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
   },
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
+    "start": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "lint": "eslint --max-warnings=0 ./src ./cypress",
     "cypress:run": "cypress run",
     "cypress:open": "cypress open",
@@ -27,7 +26,9 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "@vitejs/plugin-react": "^4.0.0",
     "antd": "^5.4.4",
+    "cypress": "^12.10.0",
     "final-form": "^4.20.9",
     "lodash-es": "^4.17.21",
     "moment": "^2.29.4",
@@ -35,11 +36,12 @@
     "react-dom": "^18.2.0",
     "react-final-form": "^6.5.9",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.10.0",
-    "react-scripts": "^5.0.1"
+    "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
-    "cypress": "^12.10.0",
+    "@types/lodash-es": "^4.17.7",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-cypress": "^2.13.2",
@@ -47,6 +49,9 @@
     "eslint-plugin-prettier": "^4.2.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.7",
-    "serve": "^14.2.0"
+    "serve": "^14.2.0",
+    "typescript": "^5.0.4",
+    "typescript-plugin-css-modules": "^5.0.1",
+    "vite": "^4.3.1"
   }
 }
